// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<IntlProvider
  locale="en-US"
>
  <SystemPolicyCards
    loading={true}
    policies={
      Array [
        Object {
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
        Object {
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
      ]
    }
  >
    <Grid
      hasGutter={true}
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                  "ssgVersion": "0.1.45",
                  "supported": true,
                }
              }
            >
              <Card>
                <article
                  className="pf-c-card"
                  data-ouia-component-id="OUIA-Generated-Card-1"
                  data-ouia-component-type="PF4/Card"
                  data-ouia-safe={true}
                  id=""
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span>
                                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </h4>
                          </Text>
                          <Tooltip
                            content={
                              <TextContent>
                                This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                              </TextContent>
                            }
                            position="bottom"
                          >
                            <Popper
                              appendTo={[Function]}
                              distance={15}
                              enableFlip={true}
                              flipBehavior={
                                Array [
                                  "top",
                                  "right",
                                  "bottom",
                                  "left",
                                  "top",
                                  "right",
                                  "bottom",
                                ]
                              }
                              isVisible={false}
                              onBlur={[Function]}
                              onDocumentClick={false}
                              onDocumentKeyDown={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTriggerEnter={[Function]}
                              placement="bottom"
                              popper={
                                <div
                                  className="pf-c-tooltip"
                                  id="pf-tooltip-1"
                                  role="tooltip"
                                  style={
                                    Object {
                                      "maxWidth": null,
                                      "opacity": 0,
                                      "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                    }
                                  }
                                >
                                  <TooltipArrow />
                                  <TooltipContent
                                    isLeftAligned={false}
                                  >
                                    <TextContent>
                                      This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                    </TextContent>
                                  </TooltipContent>
                                </div>
                              }
                              popperMatchesTriggerWidth={false}
                              positionModifiers={
                                Object {
                                  "bottom": "pf-m-bottom",
                                  "left": "pf-m-left",
                                  "right": "pf-m-right",
                                  "top": "pf-m-top",
                                }
                              }
                              trigger={
                                Array [
                                  "External policy ",
                                  <OutlinedQuestionCircleIcon
                                    className="grey-icon"
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  />,
                                ]
                              }
                              zIndex={9999}
                            >
                              <FindRefWrapper
                                onFoundRef={[Function]}
                              >
                                External policy 
                                <OutlinedQuestionCircleIcon
                                  className="grey-icon"
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    className="grey-icon"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                    />
                                  </svg>
                                </OutlinedQuestionCircleIcon>
                              </FindRefWrapper>
                            </Popper>
                          </Tooltip>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Not compliant
                        </div>
                        <Text
                          component="small"
                        >
                          <small
                            className=""
                            data-pf-content={true}
                          >
                            10
                             rule
                            s
                             failed
                             
                            <Tooltip
                              content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                              maxWidth="22em"
                              position="bottom"
                            >
                              <Popper
                                appendTo={[Function]}
                                distance={15}
                                enableFlip={true}
                                flipBehavior={
                                  Array [
                                    "top",
                                    "right",
                                    "bottom",
                                    "left",
                                    "top",
                                    "right",
                                    "bottom",
                                  ]
                                }
                                isVisible={false}
                                onBlur={[Function]}
                                onDocumentClick={false}
                                onDocumentKeyDown={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                onTriggerEnter={[Function]}
                                placement="bottom"
                                popper={
                                  <div
                                    className="pf-c-tooltip"
                                    id="pf-tooltip-2"
                                    role="tooltip"
                                    style={
                                      Object {
                                        "maxWidth": "22em",
                                        "opacity": 0,
                                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                      }
                                    }
                                  >
                                    <TooltipArrow />
                                    <TooltipContent
                                      isLeftAligned={false}
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </TooltipContent>
                                  </div>
                                }
                                popperMatchesTriggerWidth={false}
                                positionModifiers={
                                  Object {
                                    "bottom": "pf-m-bottom",
                                    "left": "pf-m-left",
                                    "right": "pf-m-right",
                                    "top": "pf-m-top",
                                  }
                                }
                                trigger={
                                  <span
                                    aria-describedby="pf-tooltip-2"
                                  >
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                }
                                zIndex={9999}
                              >
                                <FindRefWrapper
                                  onFoundRef={[Function]}
                                >
                                  <span
                                    aria-describedby="pf-tooltip-2"
                                  >
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                </FindRefWrapper>
                              </Popper>
                            </Tooltip>
                          </small>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              SSG version: 
                              0.1.45
                            </p>
                          </Text>
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              Last scanned: 
                              <FormattedRelative
                                updateInterval={10000}
                                value={1551853213000}
                              >
                                <span>
                                  2 years ago
                                </span>
                              </FormattedRelative>
                            </p>
                          </Text>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
        <GridItem
          key="0"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-2"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="1"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-3"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
        <GridItem
          key="2"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Card>
              <article
                className="pf-c-card"
                data-ouia-component-id="OUIA-Generated-Card-4"
                data-ouia-component-type="PF4/Card"
                data-ouia-safe={true}
                id=""
              >
                <CardBody>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </CardBody>
              </article>
            </Card>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<IntlProvider
  locale="en-US"
>
  <SystemPolicyCards
    loading={false}
    policies={
      Array [
        Object {
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
        Object {
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
          "ssgVersion": "0.1.45",
          "supported": true,
        },
      ]
    }
  >
    <Grid
      hasGutter={true}
    >
      <div
        className="pf-l-grid pf-m-gutter"
      >
        <GridItem
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                  "ssgVersion": "0.1.45",
                  "supported": true,
                }
              }
            >
              <Card>
                <article
                  className="pf-c-card"
                  data-ouia-component-id="OUIA-Generated-Card-5"
                  data-ouia-component-type="PF4/Card"
                  data-ouia-safe={true}
                  id=""
                >
                  <CardBody>
                    <div
                      className="pf-c-card__body"
                    >
                      <TextContent
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Text
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span>
                                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </h4>
                          </Text>
                          <Tooltip
                            content={
                              <TextContent>
                                This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                              </TextContent>
                            }
                            position="bottom"
                          >
                            <Popper
                              appendTo={[Function]}
                              distance={15}
                              enableFlip={true}
                              flipBehavior={
                                Array [
                                  "top",
                                  "right",
                                  "bottom",
                                  "left",
                                  "top",
                                  "right",
                                  "bottom",
                                ]
                              }
                              isVisible={false}
                              onBlur={[Function]}
                              onDocumentClick={false}
                              onDocumentKeyDown={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onTriggerEnter={[Function]}
                              placement="bottom"
                              popper={
                                <div
                                  className="pf-c-tooltip"
                                  id="pf-tooltip-3"
                                  role="tooltip"
                                  style={
                                    Object {
                                      "maxWidth": null,
                                      "opacity": 0,
                                      "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                    }
                                  }
                                >
                                  <TooltipArrow />
                                  <TooltipContent
                                    isLeftAligned={false}
                                  >
                                    <TextContent>
                                      This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                    </TextContent>
                                  </TooltipContent>
                                </div>
                              }
                              popperMatchesTriggerWidth={false}
                              positionModifiers={
                                Object {
                                  "bottom": "pf-m-bottom",
                                  "left": "pf-m-left",
                                  "right": "pf-m-right",
                                  "top": "pf-m-top",
                                }
                              }
                              trigger={
                                Array [
                                  "External policy ",
                                  <OutlinedQuestionCircleIcon
                                    className="grey-icon"
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  />,
                                ]
                              }
                              zIndex={9999}
                            >
                              <FindRefWrapper
                                onFoundRef={[Function]}
                              >
                                External policy 
                                <OutlinedQuestionCircleIcon
                                  className="grey-icon"
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    className="grey-icon"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                    />
                                  </svg>
                                </OutlinedQuestionCircleIcon>
                              </FindRefWrapper>
                            </Popper>
                          </Tooltip>
                        </div>
                      </TextContent>
                      <div
                        className="margin-bottom-md"
                      >
                        <div
                          className="ins-c-policy-card ins-m-noncompliant"
                        >
                          <ExclamationCircleIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                              />
                            </svg>
                          </ExclamationCircleIcon>
                           Not compliant
                        </div>
                        <Text
                          component="small"
                        >
                          <small
                            className=""
                            data-pf-content={true}
                          >
                            10
                             rule
                            s
                             failed
                             
                            <Tooltip
                              content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                              maxWidth="22em"
                              position="bottom"
                            >
                              <Popper
                                appendTo={[Function]}
                                distance={15}
                                enableFlip={true}
                                flipBehavior={
                                  Array [
                                    "top",
                                    "right",
                                    "bottom",
                                    "left",
                                    "top",
                                    "right",
                                    "bottom",
                                  ]
                                }
                                isVisible={false}
                                onBlur={[Function]}
                                onDocumentClick={false}
                                onDocumentKeyDown={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                onTriggerEnter={[Function]}
                                placement="bottom"
                                popper={
                                  <div
                                    className="pf-c-tooltip"
                                    id="pf-tooltip-4"
                                    role="tooltip"
                                    style={
                                      Object {
                                        "maxWidth": "22em",
                                        "opacity": 0,
                                        "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                      }
                                    }
                                  >
                                    <TooltipArrow />
                                    <TooltipContent
                                      isLeftAligned={false}
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </TooltipContent>
                                  </div>
                                }
                                popperMatchesTriggerWidth={false}
                                positionModifiers={
                                  Object {
                                    "bottom": "pf-m-bottom",
                                    "left": "pf-m-left",
                                    "right": "pf-m-right",
                                    "top": "pf-m-top",
                                  }
                                }
                                trigger={
                                  <span
                                    aria-describedby="pf-tooltip-4"
                                  >
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                }
                                zIndex={9999}
                              >
                                <FindRefWrapper
                                  onFoundRef={[Function]}
                                >
                                  <span
                                    aria-describedby="pf-tooltip-4"
                                  >
                                    (Score: 
                                    75%
                                    )
                                  </span>
                                </FindRefWrapper>
                              </Popper>
                            </Tooltip>
                          </small>
                        </Text>
                      </div>
                      <Text
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              SSG version: 
                              0.1.45
                            </p>
                          </Text>
                          <Text>
                            <p
                              className=""
                              data-pf-content={true}
                            >
                              Last scanned: 
                              <FormattedRelative
                                updateInterval={10000}
                                value={1551853213000}
                              >
                                <span>
                                  2 years ago
                                </span>
                              </FormattedRelative>
                            </p>
                          </Text>
                        </small>
                      </Text>
                    </div>
                  </CardBody>
                </article>
              </Card>
            </SystemPolicyCard>
          </div>
        </GridItem>
      </div>
    </Grid>
  </SystemPolicyCards>
</IntlProvider>
`;
